--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,15 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+     - uses: actions/checkout@v1
      - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: arn:aws:iam::827873213078:user/jsamm
-        aws-region: us-west-1
+        role-to-assume: arn:aws:iam::123456789100:role/my-github-actions-role
+        aws-region: us-east-2
 
     
     - name: Run Dockerfile
-      uses: actions/checkout@v1
+    
       run: |
         docker build -t jsamm21/terraformflaskapp .
         docker login -u "jsamm21" -p "Ascent2021" docker.io
