--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
           aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
-          aws-region: us-east-2
+          aws-region: us-west-1
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -30,7 +30,7 @@ jobs:
         env:
           TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
         run: |
-          cd tf-example/
+          cd .
           terraform init
           terraform validate
           terraform plan 
