Deleted docker portion, going to use Code Deploy

--- a/.github/workflows/Provision EC2 Instance.yml
+++ b/.github/workflows/Provision EC2 Instance.yml
@@ -5,7 +5,12 @@ on:
       ec2-name:
         description: EC2 name
         required: true
-        default: 'App Server'
+        default: 'Terraform Flask App'
+        type: string
+      s3-name:
+        description: S3 name
+        required: true
+        default: 'Terraform Flask App'
         type: string
 jobs:
   provision-ec2:
@@ -15,7 +20,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      - name: Configure AWS credentials
+      - name: Configure AWS EC2 credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
@@ -25,7 +30,7 @@ jobs:
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_wrapper: false
-      - name: Terraform Apply
+      - name: Terraform Create EC2
         id:   apply
         env:
           TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
@@ -35,3 +40,15 @@ jobs:
           terraform validate
           terraform plan 
           terraform apply -auto-approve
+      - name: Terraform Create S3
+        id:   apply
+        env:
+          TF_VAR_s3_name:  "${{ github.event.inputs.s3-name }}"
+        run: |
+          cd .
+          terraform init
+          terraform validate
+          terraform plan 
+          terraform apply -auto-approve
+
+    
