--- a/.github/workflows/Provision EC2 Instance.yml
+++ b/.github/workflows/Provision EC2 Instance.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Terraform Create EC2
         id:   apply
         env:
-          TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
+          # TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
           TF_VAR_s3_name:  "${{ github.event.inputs.s3-name }}"
         run: |
           cd .
