--- a/.github/workflows/Provision EC2 Instance.yml
+++ b/.github/workflows/Provision EC2 Instance.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           TF_VAR_s3_name:  "${{ github.event.inputs.s3-name }}"
         run: |
-          cd TF Files/
+          cd TerraformFiles/
           terraform init
           terraform validate
           terraform plan 
@@ -45,7 +45,7 @@ jobs:
         env:
           TF_VAR_ec2_name:  "${{ github.event.inputs.ec2-name }}"
         run: |
-          cd TF Files/
+          cd TerraformFiles/
           terraform init
           terraform validate
           terraform plan 
