Changed deployonec2 workflow dispatch required to false

--- a/.github/workflows/deployonec2.yml
+++ b/.github/workflows/deployonec2.yml
@@ -3,8 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       start-workflow:
-        description: EC2 name
-        required: flase
+        required: false
 
 jobs:
   deploy:
