--- a/.github/workflows/deployonec2.yml
+++ b/.github/workflows/deployonec2.yml
@@ -1,23 +1,22 @@
-# Trigger deployment only on push to master branch
+name: Upload Website
+
 on:
-  workflow_dispatch:
+  push:
+    workflow_dispatch:
     inputs:
       start-workflow:
         required: false
 
 jobs:
   deploy:
-    name: Deploy to EC2 on master branch push
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout the files
-        uses: actions/checkout@v2
-
-      - name: Deploy to Server 1
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.HOST_DNS }}
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          TARGET: ${{ secrets.TARGET_DIR }}
+    - uses: actions/checkout@master
+    - uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: '${{ secrets.AWS_S3_BUCKET }}'
+        AWS_ACCESS_KEY_ID: '${{ secrets.TF_USER_AWS_KEY }}'
+        AWS_SECRET_ACCESS_KEY: '${{ secrets.TF_USER_AWS_SECRET }}'
+        AWS_REGION: 'us-west-1'   # optional: defaults to us-east-1
