--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: my-repo/my-image:${{ github.sha }}
+        tags: jsamm21/terraformflaskapp:${{ github.sha }}
 
     - name: Deploy to EC2
       run: |
