--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh -o StrictHostKeyChecking=no ubuntu@ec2-54-176-230-161.us-west-1.compute.amazonaws.com "docker pull jsamm21/terraformflaskapp:${{ github.sha }} && \
+        ssh -i pemkey/terraform-flask-key ubuntu@ec2-54-176-230-161.us-west-1.compute.amazonaws.com "docker pull jsamm21/terraformflaskapp:${{ github.sha }} && \
         docker stop my-container && \
         docker rm my-container && \
         docker run -d --name my-container -p 80:80 jsamm21/terraformflaskapp:${{ github.sha }}"
