changed key name in yml

--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -38,13 +38,13 @@ jobs:
     - name: Configure SSH
       run: |
         mkdir -p ~/.ssh/
-        echo "$SSH_KEY" > ~/.ssh/github-actions-key
-        chmod 600 ~/.ssh/github-actions-key
+        echo "$SSH_KEY" > ~/.ssh/terraform-flask-key
+        chmod 600 ~/.ssh/terraform-flask-key
         cat >>~/.ssh/config <<END
         Host ec2
           HostName $SSH_HOST
           User $SSH_USER
-          IdentityFile ~/.ssh/github-actions-key
+          IdentityFile ~/.ssh/terraform-flask-key
           StrictHostKeyChecking no
         END
       env:
@@ -55,11 +55,11 @@ jobs:
     - name: List home directory
       run: ssh ec2 'ls -la'
 
-    - name: Deploy to EC2
-      run: |
-        ssh -i ${{ secrets.EC2_SSH_KEY }} ubuntu@ec2-54-176-230-161.us-west-1.compute.amazonaws.com "docker pull jsamm21/terraformflaskapp:${{ github.sha }} && \
-        docker stop my-container && \
-        docker rm my-container && \
-        docker run -d --name my-container -p 80:80 jsamm21/terraformflaskapp:${{ github.sha }}"
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+    # - name: Deploy to EC2
+    #   run: |
+    #     ssh -i ${{ secrets.EC2_SSH_KEY }} ubuntu@ec2-54-176-230-161.us-west-1.compute.amazonaws.com "docker pull jsamm21/terraformflaskapp:${{ github.sha }} && \
+    #     docker stop my-container && \
+    #     docker rm my-container && \
+    #     docker run -d --name my-container -p 80:80 jsamm21/terraformflaskapp:${{ github.sha }}"
+    #   env:
+    #     SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
