--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -1,4 +1,4 @@
-name: Terraform EC2 Deployment
+name: Deploy to EC2
 
 on:
   push:
@@ -13,31 +13,52 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+  
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-        aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
-        aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
-        aws-region: us-west-1
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_SECRET }}
 
-    - name: Terraform Init
-      run: terraform init
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: jsamm21/terraformflaskapp:${{ github.sha }}
 
-    - name: Terraform Plan
-      run: terraform plan -out=plan.tfplan
+    - name: Git clone the repository
+      uses: actions/checkout@v3
 
-    - name: Terraform Apply
-      run: terraform apply -input=false plan.tfplan
-
-    - name: SSH into the EC2 instance
-      run: ssh -i "path/to/key.pem" ubuntu@$(terraform output public_ip)
-
-    - name: Install dependencies
+    - name: Configure SSH
       run: |
-        sudo apt-get update
-        sudo apt-get install -y python3-pip
-        sudo pip3 install -r requirements.txt
+        mkdir -p ~/.ssh/
+        echo "$SSH_KEY" > ~/.ssh/terraform-flask-key.pem
+        chmod 600 ~/.ssh/terraform-flask-key.pem
+        cat >>~/.ssh/config <<END
+        Host ec2
+          HostName $SSH_HOST
+          User $SSH_USER
+          IdentityFile ~/.ssh/terraform-flask-key.pem
+          StrictHostKeyChecking no
+        END
+      env:
+        SSH_HOST: ${{ secrets.HOST_DNS }}
+        SSH_USER: ${{ secrets.USERNAME }}
+        SSH_KEY: ${{ secrets.EC2_SSH_KEY }} 
 
-    - name: Start the Flask app
-      run: |
-        nohup python3 flaskweb.py &
+    - name: List home directory
+      run: ssh ec2 'ls -la'
+
+    - name: SSH into EC2
+      id: ssh-into-ec2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST_DNS }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.EC2_SSH_KEY }}
