--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -66,12 +66,12 @@ jobs:
 
     - name: Stop and remove existing Docker container
       run: |
-        ssh ${{ steps.ssh-into-ec2.outputs.ip }} -tt
+        ssh ${{ steps.ssh-into-ec2.outputs.ip }}
           docker stop terraformflaskapp
           docker rm terraformflaskapp
 
 
     - name: Start new Docker container
       run: |
-        ssh ${{ steps.ssh-into-ec2.outputs.ip }} -tt
+        ssh ${{ steps.ssh-into-ec2.outputs.ip }}
           docker run -d --name terraformflaskapp -p 80:5000 jsamm21/terraformflaskapp:${{ env.SHA }}
