--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -38,18 +38,18 @@ jobs:
     - name: Configure SSH
       run: |
         mkdir -p ~/.ssh/
-        echo "$SSH_KEY" > ~/.ssh/terraform-flask-key.pem
-        chmod 600 ~/.ssh/terraform-flask-key.pem
+        echo "$SSH_KEY" > ~/.ssh/terraform.key
+        chmod 600 ~/.ssh/terraform.key
         cat >>~/.ssh/config <<END
         Host ec2
           HostName $SSH_HOST
           User $SSH_USER
-          IdentityFile ~/.ssh/mykey
+          IdentityFile ~/.ssh/terraform.key
         END
       env:
-        SSH_HOST: ${{ secrets.HOST_DNS }}
-        SSH_USER: ${{ secrets.USERNAME }}
-        SSH_KEY: ${{ secrets.EC2_SSH_KEY }} 
+        SSH_HOST: ${{ secrets.TERRAFORM_SSH_HOST }}
+        SSH_USER: ${{ secrets.TERRAFORM_SSH_USER }}
+        SSH_KEY: ${{ secrets.TERRAFORM_SSH_KEY }} 
     
     - name: List home directory
       run: ssh ec2 'ls -la'
