added start server portion

--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -51,8 +51,9 @@ jobs:
         SSH_USER: ${{ secrets.TERRAFORM_SSH_USER }}
         SSH_KEY: ${{ secrets.TERRAFORM_SSH_KEY }} 
     
-    - name: List home directory
-      run: ssh ec2 'ls -la'
+    - name: Start the server
+        if: ${{ always() }}
+        run: ssh terraform 'sudo systemctl start my-application'
 
 
 
