--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -52,7 +52,8 @@ jobs:
         SSH_KEY: ${{ secrets.TERRAFORM_SSH_KEY }} 
     
     - name: Start the server
-        run: ssh terraform 'sudo systemctl start my-application'
+        run: | 
+          ssh terraform 'sudo systemctl start my-application'
 
 
 
