Changed terraform to ec2

--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -53,7 +53,7 @@ jobs:
     
     - name: Start the server
       if: ${{ always() }}
-      run: ssh terraform 'sudo systemctl start my-application'
+      run: ssh ec2 'sudo systemctl start my-application'
 
 
 
