--- a/.github/workflows/builddockerimage.yml
+++ b/.github/workflows/builddockerimage.yml
@@ -38,13 +38,13 @@ jobs:
     - name: Configure SSH
       run: |
         mkdir -p ~/.ssh/
-        echo "$SSH_KEY" > ~/.ssh/terraform.key
-        chmod 600 ~/.ssh/terraform.key
+        echo "$SSH_KEY" > ~/.ssh/ec2.key
+        chmod 600 ~/.ssh/ec2.key
         cat >>~/.ssh/config <<END
         Host ec2
           HostName $SSH_HOST
           User $SSH_USER
-          IdentityFile ~/.ssh/terraform.key
+          IdentityFile ~/.ssh/ec2.key
         END
       env:
         SSH_HOST: ${{ secrets.EC2_SSH_HOST }}
