--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 env/
 __pycache__/
 pemkey/
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
