--- a/.github/workflows/Provision AWSELBI.yml
+++ b/.github/workflows/Provision AWSELBI.yml
@@ -8,12 +8,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '14'
-      # - name: Configure AWS EC2 credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
-      #     aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
-      #     aws-region: us-west-1
+      - name: Configure AWS EC2 credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: '${{ secrets.TF_USER_AWS_KEY }}'
+          aws-secret-access-key: '${{ secrets.TF_USER_AWS_SECRET }}'
+          aws-region: us-west-1
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
